--- a/Code/Core/Core.vcxproj
+++ b/Code/Core/Core.vcxproj
@@ -310,12 +310,14 @@
     <ClCompile Include="..\Foundation\src\win32_specific.cpp" />
     <ClCompile Include="..\Foundation\src\window.cpp" />
     <ClCompile Include="bindings\bindings.cpp" />
-    <ClCompile Include="src\core.cpp" />
+    <ClCompile Include="src\bvh.cpp" />
+    <ClCompile Include="src\typedefs.cpp" />
+    <ClCompile Include="src\world.cpp" />
     <ClCompile Include="src\dbgdraw.cpp" />
     <ClCompile Include="src\floodfill.cpp" />
     <ClCompile Include="src\march.cpp" />
     <ClCompile Include="src\tessel.cpp" />
-    <ClCompile Include="src\tests.cpp" />
+    <ClCompile Include="src\demo.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Foundation\src\concatenator.h" />
@@ -340,7 +342,9 @@
     <ClInclude Include="..\Foundation\src\timing.h" />
     <ClInclude Include="..\Foundation\src\window.h" />
     <ClInclude Include="bindings\bindings.h" />
-    <ClInclude Include="src\core.h" />
+    <ClInclude Include="src\bvh.h" />
+    <ClInclude Include="src\typedefs.h" />
+    <ClInclude Include="src\world.h" />
     <ClInclude Include="src\dbgdraw.h" />
     <ClInclude Include="src\floodfill.h" />
     <ClInclude Include="src\march.h" />
