--- a/Code/Core/Core.vcxproj.filters
+++ b/Code/Core/Core.vcxproj.filters
@@ -185,6 +185,9 @@
     <ClInclude Include="src\assembler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\Foundation\src\art.h">
+      <Filter>Foundation</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Foundation\src\hash_table.inl">
